--- a/WordPress/Resources/pl.lproj/Localizable.strings
+++ b/WordPress/Resources/pl.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-03 09:33:41+0000 */
+/* Translation-Revision-Date: 2021-07-06 05:22:04+0000 */
 /* Plural-Forms: nplurals=3; plural=(n == 1) ? 0 : ((n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 12 || n % 100 > 14)) ? 1 : 2); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: pl */
@@ -4752,7 +4752,7 @@
 
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
-"Pending" = "Oczekuje";
+"Pending" = "Oczekujące";
 
 /* No comment provided by engineer. */
 "Pending moderation" = "Oczekuje na moderację";
@@ -4961,7 +4961,7 @@
 
 /* For setting the format of a post.
    The post formats available for the post. Should be the same as in core WP. */
-"Post Format" = "Format wpisu";
+"Post Format" = "Format treści";
 
 /* Prompts the user that a restored post was moved to the drafts list. */
 "Post Restored to Drafts" = "Post Restored to Drafts";
@@ -7217,7 +7217,7 @@
 "Type to get more suggestions" = "Type to get more suggestions";
 
 /* URL text field placeholder */
-"URL" = "URL";
+"URL" = "Adres URL";
 
 /* Menus label for describing which menu the location uses in the header. */
 "USES" = "USES";
